<?xml version="1.0"?>
<package format="2">

  <name>people_legs</name>
  <version>1.0.0</version>
  <description>The people_legs package</description>

  <maintainer email="ibrahim.jad@outlook.dk">Ibrahim J. Masri</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>people_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
